sample-apps/django/k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django
  labels:
    app: django-service
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
